--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Playwrite+RO:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
     margin: 0;
@@ -6,7 +6,8 @@
     box-sizing: border-box;
     /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
-    font-family: "Roboto", sans-serif;
+    font-family: "Playwrite RO", cursive;
+    font-size: 14px; 
 }
 body{
     background-image: url('/bg.jpg');
@@ -18,7 +19,7 @@ body{
     
 }
 .container{
-    width: 90vw;
+    width: 95vw;
     height: 90vh;
     background-color: rgba(17,25,40,0.75);
     backdrop-filter: blur(19px) saturate(180%);
